product page corrected

--- a/index.html
+++ b/index.html
@@ -21,32 +21,36 @@
 
         <div class="menu__mobile-languages">
             <div class="menu__menu menu__mobile-languages--one-item">
-                <a><img src="/dist/img/united-kingdom.webp"
-                        alt="flaga Wielkiej Brytanii">English</a>
+                <a><img src="dist/img/united-kingdom.webp" alt="flaga Wielkiej Brytanii">Languages</a>
+                <img class="menu__mobile-flag" src="dist/img/united-kingdom.webp" alt="flaga Wielkiej Brytanii">
             </div>
             <div class="menu__menu menu__mobile-languages--all-items">
-                <a href="https://techgafil.pl/en"><img src="/dist/img/united-kingdom.webp"
+                <a href="https://techgafil.pl/en"><img src="dist/img/united-kingdom.webp"
                         alt="flaga Wielkiej Brytanii">English</a>
-                <a href="https://techgafil.pl"><img src="/dist/img/poland.webp" alt="flaga Polski">Polski</a>
-                <a href="https://techgafil.pl/de"><img src="/dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
+                <a href="https://techgafil.pl"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
+                <a href="https://techgafil.pl/de"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
             </div>
         </div>
         <div class="menu__menu menu__languages">
-            <a href="https://techgafil.pl"><img src="/dist/img/poland.webp" alt="flaga Polski">Polski</a>
-            <a href="https://techgafil.pl/en"><img src="/dist/img/united-kingdom.webp"
+            <a href="https://techgafil.pl"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
+            <a href="https://techgafil.pl/en"><img src="dist/img/united-kingdom.webp"
                     alt="flaga Wielkiej Brytanii">English</a>
-            <a href="https://techgafil.pl/de"><img src="/dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
+            <a href="https://techgafil.pl/de"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
         </div>
 
         <div class="menu__mobile-menu">
             <div class="menu__mobile-menu--top"></div>
             <div class="menu__mobile-menu--middle"></div>
             <div class="menu__mobile-menu--bottom"></div>
+
+            <div class="menu__menu menu__mobile-menu--area">
+                <a href="produkty.html">Produkty</a>
+                <a href="kontakt.html">Kontakt</a>
+            </div>
         </div>
         <div class="menu__menu menu__menu-desktop">
             <a href="produkty.html">Produkty</a>
             <a href="kontakt.html">Kontakt</a>
-
         </div>
 
         <a href="#" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
@@ -71,11 +75,11 @@
             <a href="produkty.html">Produkty</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
-        <a href="#" class="logo"><img src="/dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
+        <a href="#" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
         <div class="footer__social">
-            <a href="#"><img src="/dist/img/whatsup.svg" alt="whatsup social icon"></a>
-            <a href="#"><img src="/dist/img/facebook.svg" alt="facebook social icon"></a>
-            <a href="#"><img src="/dist/img/youtube.svg" alt="youtube social icon"></a>
+            <a href="#"><img src="dist/img/whatsup.svg" alt="whatsup social icon"></a>
+            <a href="#"><img src="dist/img/facebook.svg" alt="facebook social icon"></a>
+            <a href="#"><img src="dist/img/youtube.svg" alt="youtube social icon"></a>
         </div>
     </div>
 </footer>
