--- a/kontakt.html
+++ b/kontakt.html
@@ -21,32 +21,36 @@
 
         <div class="menu__mobile-languages">
             <div class="menu__menu menu__mobile-languages--one-item">
-                <a><img src="/dist/img/united-kingdom.webp"
-                        alt="flaga Wielkiej Brytanii">English</a>
+                <a><img src="dist/img/united-kingdom.webp" alt="flaga Wielkiej Brytanii">Languages</a>
+                <img class="menu__mobile-flag" src="dist/img/united-kingdom.webp" alt="flaga Wielkiej Brytanii">
             </div>
             <div class="menu__menu menu__mobile-languages--all-items">
-                <a href="https://techgafil.pl/en"><img src="/dist/img/united-kingdom.webp"
+                <a href="https://techgafil.pl/en"><img src="dist/img/united-kingdom.webp"
                         alt="flaga Wielkiej Brytanii">English</a>
-                <a href="https://techgafil.pl"><img src="/dist/img/poland.webp" alt="flaga Polski">Polski</a>
-                <a href="https://techgafil.pl/de"><img src="/dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
+                <a href="https://techgafil.pl"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
+                <a href="https://techgafil.pl/de"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
             </div>
         </div>
         <div class="menu__menu menu__languages">
-            <a href="https://techgafil.pl"><img src="/dist/img/poland.webp" alt="flaga Polski">Polski</a>
-            <a href="https://techgafil.pl/en"><img src="/dist/img/united-kingdom.webp"
+            <a href="https://techgafil.pl"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
+            <a href="https://techgafil.pl/en"><img src="dist/img/united-kingdom.webp"
                     alt="flaga Wielkiej Brytanii">English</a>
-            <a href="https://techgafil.pl/de"><img src="/dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
+            <a href="https://techgafil.pl/de"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
         </div>
 
         <div class="menu__mobile-menu">
             <div class="menu__mobile-menu--top"></div>
             <div class="menu__mobile-menu--middle"></div>
             <div class="menu__mobile-menu--bottom"></div>
+
+            <div class="menu__menu menu__mobile-menu--area">
+                <a href="produkty.html">Produkty</a>
+                <a href="kontakt.html">Kontakt</a>
+            </div>
         </div>
         <div class="menu__menu menu__menu-desktop">
             <a href="produkty.html">Produkty</a>
             <a href="kontakt.html">Kontakt</a>
-
         </div>
 
         <a href="#" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
@@ -62,7 +66,7 @@
         <div class="main__text--contact wrapper">
             <a href="#contact">
                 <h1 class="main__text-header main__text-header--contact">Kontakt</h1>
-                <img class="main__text-icon--contact" src="/dist/img/Path 5.svg" alt="arrow down">
+                <img class="main__text-icon--contact" src="dist/img/Path 5.svg" alt="arrow down">
             </a>
         </div>
     </section>
@@ -77,7 +81,7 @@
                 <p class="contact-info__addres-data">E-mail: <br><a href="mailto: biuro@techgafil.pl">biuro@techgafil.pl</a></p>
             </div>
             <div class="contact-form">
-                <h3 class="contact-form__header">Forumlarz<br>kontatkowy</h3>
+                <h3 class="contact-form__header">Formularz<br>kontaktowy</h3>
                 <form class="contact-form__form">
                     <label for="name">Imię i nazwisko</label>
                     <input type="text" id="name" name="name" placeholder="Twoje imię i nazwisko...">
@@ -102,11 +106,11 @@
             <a href="produkty.html">Produkty</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
-        <a href="#" class="logo"><img src="/dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
+        <a href="#" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
         <div class="footer__social">
-            <a href="#"><img src="/dist/img/whatsup.svg" alt="whatsup social icon"></a>
-            <a href="#"><img src="/dist/img/facebook.svg" alt="facebook social icon"></a>
-            <a href="#"><img src="/dist/img/youtube.svg" alt="youtube social icon"></a>
+            <a href="#"><img src="dist/img/whatsup.svg" alt="whatsup social icon"></a>
+            <a href="#"><img src="dist/img/facebook.svg" alt="facebook social icon"></a>
+            <a href="#"><img src="dist/img/youtube.svg" alt="youtube social icon"></a>
         </div>
     </div>
 </footer>
