--- a/dziekuje.html
+++ b/dziekuje.html
@@ -63,47 +63,8 @@
             <div class="main__hero-shadow"></div>
         </div>
 
-        <div class="main__text--contact wrapper">
-            <a href="#contact">
-                <h1 class="main__text-header main__text-header--contact">Kontakt</h1>
-                <img class="main__text-icon--contact" src="dist/img/Path 5.svg" alt="arrow down">
-            </a>
-        </div>
-    </section>
-    <section class="contact" id="contact">
-        <div class="contact__wrapper wrapper">
-            <div class="contact-info">
-                <h3 class="contact-info__header">Informacje</h3>
-                <p class="contact-info__text">Specjalizujemy się w produkcji dysz chłodzących NNPB i PB - niezbędnych w produkcji opakowań szklanych. </p>
-                <p class="contact-info__addres-data contact-info__company-name">TECHGAFIL</p>
-                <p class="contact-info__addres-data">Adres: <br>Głuchów 167, 37-100 Łańcut</p>
-                <p class="contact-info__addres-data">Telefon: <br><a href="tel:+48693341017">+48 693 341 017</a></p>
-                <p class="contact-info__addres-data">E-mail: <br><a href="mailto: biuro@techgafil.pl">biuro@techgafil.pl</a></p>
-            </div>
-            <div class="contact-form">
-                <h3 class="contact-form__header">Formularz<br>kontaktowy</h3>
-                <form class="contact-form__form" action="https://formsubmit.co/8665dd5b87877a5cc756abeb0dbcf94e" method="POST">
-                    <!--Honeypot-->
-                    <input type="text" name="_honey" class="honey">
-                    <!--Disable Captcha-->
-                    <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="kontakt-success.html">
-
-                    <label for="name">Imię i nazwisko</label>
-                    <input type="text" id="name" name="name" placeholder="Twoje imię i nazwisko...">
-
-                    <label for="email">E-mail</label>
-                    <input type="email" id="email" name="email" placeholder="Twój aders e-mail...">
-                    
-                    <label for="phone">Telefon</label>
-                    <input type="tel" id="phone" name="phone" placeholder="Twój nr telefonu...">
-                    
-                    <label for="message">Wiadomość</label>
-                    <textarea type="textarea" id="message" name="message" placeholder="Twoja wiadomość..."></textarea>
-
-                    <button type="submit">Wyślij</button>
-                </form>          
-            </div>
+        <div class="main__text--thank-you wrapper">
+            <p>Dziękujemy, wiadomość została wysłana!</p>
         </div>
     </section>
     <footer>
@@ -120,6 +81,7 @@
         </div>
     </div>
 </footer>
+
     <script src="dist/js/script.min.js"></script>
 </body>
 
