--- a/kontakt.html
+++ b/kontakt.html
@@ -120,6 +120,11 @@
         </div>
     </div>
 </footer>
+    <div class="cookie">
+    <p class="cookie--text">Nasza strona korzysta z ciasteczek!</p>
+    <button class="cookie--btn">Akceptuję 🍪</button>
+</div>
+    
     <script src="dist/js/script.min.js"></script>
 </body>
 
