--- a/produkty.html
+++ b/produkty.html
@@ -122,6 +122,10 @@
         </div>
     </div>
 </footer>
+    <div class="cookie">
+    <p class="cookie--text">Nasza strona korzysta z ciasteczek!</p>
+    <button class="cookie--btn">Akceptuję 🍪</button>
+</div>
 
     <script src="dist/js/script.min.js"></script>
     <script src="dist/js/product.min.js"></script>
