--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             </div>
         </div>
         <div class="menu__menu menu__languages">
-            <a href="https://techgafil.pl"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
-            <a href="https://techgafil.pl/en"><img src="dist/img/united-kingdom.webp"
+            <a href="https://tomaszswist.github.io/techgafil/"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
+            <a href="#"><img src="dist/img/united-kingdom.webp"
                     alt="flaga Wielkiej Brytanii">English</a>
-            <a href="https://techgafil.pl/de"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
+            <a href="#"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
         </div>
 
         <div class="menu__mobile-menu">
@@ -53,7 +53,7 @@
             <a href="kontakt.html">Kontakt</a>
         </div>
 
-        <a href="#" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
+        <a href="https://tomaszswist.github.io/techgafil/" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
 
     </div>
 </nav>
@@ -75,7 +75,7 @@
             <a href="produkty.html">Produkty</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
-        <a href="#" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
+        <a href="https://tomaszswist.github.io/techgafil/" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
         <div class="footer__social">
             <a href="#"><img src="dist/img/whatsup.svg" alt="whatsup social icon"></a>
             <a href="#"><img src="dist/img/facebook.svg" alt="facebook social icon"></a>
