little SEO optimalization - meta description, title, H tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dysze chłodzące NNPB i półfabrykaty - TECHGAFIL</title>
+    <title>TECHGAFIL - Dysze chłodzące NNPB, PB i półfabrykaty rurek</title>
+    <meta name="description" content="Szukasz producenta dysz chłodzących PB i NNPB? Potrzebujesz półfabrykatów do własnych dysz? TECHGAFIL - producent dysz chłodzących PB, NNPB." />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
