--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dysze chłodzące NNPB i półfabrykaty - TECHGAFIL</title>
+    <title>TECHGAFIL - Kontakt z producentem dysz chłodzących PB i NNPB</title>
+    <meta name="description" content="Chesz się z nami skontaktować? Szukasz naszego adeesu? Napisz do nas. TECHGAFIL - dane kontaktowe, adres, e-mail, telefon i formularz kontatkowy." />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
