--- a/produkty.html
+++ b/produkty.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TECHGAFIL - Dysze chłodzące PB i NNPB</title>
-    <meta name="description" content="Chcesz zobaczyć dysze chłodzące PB i NNPB produkowane przez TECHGAFIL? Sprawdź nasze produkty." />
+    <title data-translate="title">TECHGAFIL - Dysze chłodzące PB i NNPB</title>
+    <meta data-translate="products__meta" name="description" content="Chcesz zobaczyć dysze chłodzące PB i NNPB produkowane przez TECHGAFIL? Sprawdź nasze produkty." />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,17 +26,17 @@
                 <img class="menu__mobile-flag" src="dist/img/united-kingdom.webp" alt="flaga Wielkiej Brytanii">
             </div>
             <div class="menu__menu menu__mobile-languages--all-items">
-                <a href="https://techgafil.pl/en"><img src="dist/img/united-kingdom.webp"
+                <a onClick="handleLangChange('en')"><img src="dist/img/united-kingdom.webp"
                         alt="flaga Wielkiej Brytanii">English</a>
-                <a href="https://techgafil.pl"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
-                <a href="https://techgafil.pl/de"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
+                <a onClick="handleLangChange('pl')"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
+                <a onClick="handleLangChange('de')"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
             </div>
         </div>
         <div class="menu__menu menu__languages">
-            <a href="https://tomaszswist.github.io/techgafil/"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
-            <a href="#"><img src="dist/img/united-kingdom.webp"
+            <a onClick="handleLangChange('pl')"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
+            <a onClick="handleLangChange('en')"><img src="dist/img/united-kingdom.webp"
                     alt="flaga Wielkiej Brytanii">English</a>
-            <a href="#"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
+            <a onClick="handleLangChange('de')"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
         </div>
 
         <div class="menu__mobile-menu">
@@ -54,7 +54,7 @@
             <a href="kontakt.html">Kontakt</a>
         </div>
 
-        <a href="https://tomaszswist.github.io/techgafil/" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
+        <a href="/" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
 
     </div>
 </nav>
@@ -68,12 +68,12 @@
 
         <div class="main__text wrapper">
             <div href="" class="main__text-header--left" onclick="openGallery('nnpb')">
-                <h1 class="main__text-header">Dysze chłodzące <br><span>NNPB</span></h1>
-                <p class="main__text-paragraf">Zobacz nasze dysze chłodzące NNPB (Narrow-Neck Press and Blow). Specjalizujemy sie w produkcji dysz NNPB niezbędnych do produkcji opakowań szkalnych w hutach szkła.</p>
+                <h1 data-translate="products__coolers-nnpb--h1" class="main__text-header">Dysze chłodzące <br><span>NNPB</span></h1>
+                <p data-translate="products__coolers-nnpb--p" class="main__text-paragraf">Zobacz nasze dysze chłodzące NNPB (Narrow-Neck Press and Blow). Specjalizujemy sie w produkcji dysz NNPB niezbędnych do produkcji opakowań szkalnych w hutach szkła.</p>
             </div>
             <div class="main__text-header--right" onclick="openGallery('pb')">
-                <h2 class="main__text-header">Dysze chłodzące <br><span>PB</span></h2>
-                <p class="main__text-paragraf">Nasze dysze chłodzące PB (Press and Blow). Produkujemy dysze toczone do metody PB która jest wykorzystywana przez huty szkła do produkcji opakowań szklanych.
+                <h2 data-translate="products__coolers-pb--h1" class="main__text-header">Dysze chłodzące <br><span>PB</span></h2>
+                <p data-translate="products__coolers-pb--p" class="main__text-paragraf">Nasze dysze chłodzące PB (Press and Blow). Produkujemy dysze toczone do metody PB która jest wykorzystywana przez huty szkła do produkcji opakowań szklanych.
                 </p>
             </div>
         </div>
@@ -86,19 +86,19 @@
         <div class="product-img__container">
             <div class="product-img__box" data-choice="nnpb" data-img-choice="1">
                 <div class="product-img__img"></div>
-                <p class="product-img__text">Dysze chłodzące NNPB - TECHGAFIL</p>
+                <p data-translate="products__coolers-nnpb--img" class="product-img__text">Dysze chłodzące NNPB - TECHGAFIL</p>
             </div>
             <div class="product-img__box" data-choice="nnpb" data-img-choice="2">
                 <div class="product-img__img"></div>
-                <p class="product-img__text">Dysze chłodzące NNPB - TECHGAFIL (2)</p>
+                <p data-translate="products__coolers-nnpb--img2" class="product-img__text">Dysze chłodzące NNPB - TECHGAFIL (2)</p>
             </div>
             <div class="product-img__box" data-choice="pb" data-img-choice="1">
                 <div class="product-img__img"></div>
-                <p class="product-img__text">Dysze chłodzące PB - TECHGAFIL</p>
+                <p data-translate="products__coolers-pb--img" class="product-img__text">Dysze chłodzące PB - TECHGAFIL</p>
             </div>
             <div class="product-img__box" data-choice="pb" data-img-choice="2">
                 <div class="product-img__img"></div>
-                <p class="product-img__text">Dysze chłodzące PB - TECHGAFIL (2)</p>
+                <p data-translate="products__coolers-pb--img2" class="product-img__text">Dysze chłodzące PB - TECHGAFIL (2)</p>
             </div>
         </div>
     </section>
