--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TECHGAFIL - Dysze chłodzące NNPB, PB i półfabrykaty rurek</title>
-    <meta name="description" content="Szukasz producenta dysz chłodzących PB i NNPB? Potrzebujesz półfabrykatów do własnych dysz? TECHGAFIL - producent dysz chłodzących PB, NNPB." />
+    <title data-translate="title">TECHGAFIL - Dysze chłodzące NNPB, PB i półfabrykaty rurek</title>
+    <meta data-translate="index__meta" name="description" content="Szukasz producenta dysz chłodzących PB i NNPB? Potrzebujesz półfabrykatów do własnych dysz? TECHGAFIL - producent dysz chłodzących PB, NNPB." />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,17 +26,17 @@
                 <img class="menu__mobile-flag" src="dist/img/united-kingdom.webp" alt="flaga Wielkiej Brytanii">
             </div>
             <div class="menu__menu menu__mobile-languages--all-items">
-                <a href="https://techgafil.pl/en"><img src="dist/img/united-kingdom.webp"
+                <a onClick="handleLangChange('en')"><img src="dist/img/united-kingdom.webp"
                         alt="flaga Wielkiej Brytanii">English</a>
-                <a href="https://techgafil.pl"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
-                <a href="https://techgafil.pl/de"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
+                <a onClick="handleLangChange('pl')"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
+                <a onClick="handleLangChange('de')"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
             </div>
         </div>
         <div class="menu__menu menu__languages">
-            <a href="https://tomaszswist.github.io/techgafil/"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
-            <a href="#"><img src="dist/img/united-kingdom.webp"
+            <a onClick="handleLangChange('pl')"><img src="dist/img/poland.webp" alt="flaga Polski">Polski</a>
+            <a onClick="handleLangChange('en')"><img src="dist/img/united-kingdom.webp"
                     alt="flaga Wielkiej Brytanii">English</a>
-            <a href="#"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
+            <a onClick="handleLangChange('de')"><img src="dist/img/germany.webp" alt="flaga Niemiec">Deutsche</a>
         </div>
 
         <div class="menu__mobile-menu">
@@ -54,7 +54,7 @@
             <a href="kontakt.html">Kontakt</a>
         </div>
 
-        <a href="https://tomaszswist.github.io/techgafil/" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
+        <a href="/" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
 
     </div>
 </nav>
@@ -65,8 +65,8 @@
         </div>
 
         <div class="main__text wrapper">
-            <a href="" class="main__text-header--center">
-                <h1 class="main__text-header">Dysze chłodzące <br><span>PB</span> i <span>NNPB</span></h1>
+            <a class="main__text-header--center">
+                <h1 data-translate="index__cooling-tubes" class="main__text-header">Dysze chłodzące <br><span>PB</span> i <span>NNPB</span></h1>
             </a>
         </div>
     </section>
