--- a/dziekuje.html
+++ b/dziekuje.html
@@ -74,11 +74,11 @@
             <a href="produkty.html">Produkty</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
-        <a href="https://tomaszswist.github.io/techgafil/" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
+        <a href="/" class="logo"><img src="dist/img/TECHGAFIL - logo white.webp" alt="TECHGAFIL - logo"></a>
         <div class="footer__social">
-            <a href="#"><img src="dist/img/whatsup.svg" alt="whatsup social icon"></a>
-            <a href="#"><img src="dist/img/facebook.svg" alt="facebook social icon"></a>
-            <a href="#"><img src="dist/img/youtube.svg" alt="youtube social icon"></a>
+            <a href="https://wa.me/48693341017"><img src="dist/img/whatsup.svg" alt="whatsup social icon"></a>
+            <!-- <a href="#"><img src="dist/img/facebook.svg" alt="facebook social icon"></a> -->
+            <a href="https://www.youtube.com/@techgafil1461"><img src="dist/img/youtube.svg" alt="youtube social icon"></a>
         </div>
     </div>
 </footer>
