--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="title" data-translate="title">TECHGAFIL - Dysze chłodzące NNPB, PB i półfabrykaty rurek</title>
+    <title id="title">TECHGAFIL - Dysze chłodzące NNPB, PB i półfabrykaty rurek</title>
     <meta id="meta_description" name="description" content="Szukasz producenta dysz chłodzących PB i NNPB? Potrzebujesz półfabrykatów do własnych dysz? TECHGAFIL - producent dysz chłodzących PB, NNPB." />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
